PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 8.0.0 Milestone 5
30 May 2018

pts-core: Termux external dependency support
pts-core: Other minor tweaks and changes
phoromatic: Better handling when the Phoromatic Server is run without an Internet connection or Internet disabled
phoromatic: A wide variety of other Phoromatic Server optimizations and improvements
phodevi: Add spec_store_bypass / Spectre Variant 4 reporting

Phoronix Test Suite 8.0.0 Milestone 4
16 May 2018

phoromatic: Add a "email all users" option to the rootadmin page
phoromatic: Improve search functionality on results page, allow boolean expressions, date ranges, many other search features
phoromatic: Various search improvements to `phoronix-test-suite search`
phoromatic: Allow new test profiles to be created from Phoromatic web UI
pts-core: New create-test-profile sub-command for guided process to test profile creation
pts-core: Basic changes, should be all that's needed for EU GDPR safeguards
phodevi: RISC-V SiFive CPU detection

Phoronix Test Suite 8.0.0 Milestone 3
16 April 2018

pts-core: Improvements for BSD / FreeBSD support
pts-core: Add "V8" external dependency for V8 JavaScript engine
pts-core: Add initial AdvertiseServiceOpenBenchmarkRelay support
pts-core: Add new inspect-test-profile sub-command
pts-core: Add ColoredConsole option in user configuration file of AUTO / TRUE / FALSE to control colored text behavior
pts-core: Report each test's run-time to test-rin-times in result file XML
pts-core: More XSD / OpenBenchmarking.org schema handling work for future functionality
phoromatic: Ensure environment variables set via Phoromatic web interface get passed to tests
phodevi: BSD improvements
backup: A module providing initial backup/restore functionality for PTS/Phoromatic

Phoronix Test Suite 8.0.0 Milestone 2
24 March 2018

pts-core: Add DeleteOutputBefore and DeleteOutputAfter options to the result parser
pts-core: Fix for run-random-tests sub-command