@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+phodevi: Improved X.Org Server version detection
+
 Phoronix Test Suite 8.0.0 Milestone 5
 30 May 2018
 
